template/trinity-large-preview:free-cot/row_4_update_1_template_20260309_140115.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 Instance with Latest Amazon Linux 2 AMI

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access (default: default-key)
    Default: default-key
    AllowedPattern: ^[a-zA-Z0-9-._]*$
  InstanceType:
    Type: String
    Description: EC2 instance type (default: t2.micro)
    Default: t2.micro
    AllowedPattern: ^t2\.(micro|small|medium|large|xlarge)|t3\.(nano|micro|small|medium|large|xlarge|2xlarge)|t3a\.(nano|micro|small|medium|large|xlarge|2xlarge)$

Resources:
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-SecurityGroup

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Sub 'resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-Instance

Outputs:
  InstanceId:
    Description: Instance ID
    Value: !Ref EC2Instance
  PublicIP:
    Description: Public IP address of the instance
    Value: !GetAtt EC2Instance.PublicIp
